--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="fr">
 <head>
   
@@ -12,38 +11,45 @@
 			<input type="text" name="adresseIP" id="myIP">
 		</p>
 		<p> <label for ="mask">Masque</label>
-			<input type="text" name="masque" id="mask" >
+			<input type="text" name="mask" id="mask" >
 		</p>
 		<p><label for ="adrN">NouvelleIP</label>
 			<input type="text">
 		</p>
-		<button  type="button" onclick="function calcIP()">ok</button>
+		<button  type="button" onclick="calcIP()">ok</button>
 
  
 		<!-- <input type="Submit" value="Aléatoire"> -->
 		<!-- <input type="reset" value="Annuler"> -->
 		
-  </form>
- <div id="mask">
-
+	</form>
+	<div id="myIP"></div>
 	
-
-</div>
-<div id="ip2">
+	<div id="mask"></div>
 	
-	</div>
-	<div id="adIP">
+	<div id="adrN"></div>
 	
-	</div>
+	<div id="First"></div>
+	
+	<div id="Broadcast"></div>
+	
+	<div id="Last"></div>
+	<div id="Nb"></div>
+	
+	
+	
+<!-- --- -->
 
-</body>
-</html>
 <script>
+	
 function calcIP() {
 
-	var elem = document.getElementById('myIP').value;
+	console.log("calcIP");
+
+	var elem = document.getElementById("myIP").value;
 	//console.log(elem);
 	var ip = elem.split('.');
+
 	//console.log(ip);
 	var cidr = ip[3].split('/');
 
@@ -56,40 +62,50 @@ function calcIP() {
 	var mask = 0xFFFFFFFF << (32-CIDR);
 	toString(mask);
 	document.getElementById("mask").innerHTML =toString(mask);
-
+	console.log(mask);
+	
 	var adrN = IP & mask
 	toString(adrN);
 	document.getElementById("adrN").innerHTML =toString(adrN);
-
+	console.log(adrN);
+	
+	
 	var adrFirst = adrN +1;
 	toString(adrFirst);
 	document.getElementById("First").innerHTML =toString(adrFirst);
+	console.log(adrFirst);
 
 
 	var adrDiff = adrN | ~mask;
 	toString(adrDiff);
 	document.getElementById("Broadcast").innerHTML =toString(adrDiff);
+	console.log(adrDiff);
 
 	var adrLast = adrDiff -1;
 	toString(adrLast);
 	document.getElementById("Last").innerHTML =toString(adrLast);
+	console.log(adrLast);
 
 	var nb = Math.pow(2, (32-CIDR))-2;
 	document.getElementById("Nb").innerHTML =nb;
+	console.log(nb);
 }
 
+
+
+	
+	 <!-- myForm.addEventListener('reset', function(e){ -->
+	 <!-- }); -->
+	 
 function toString(data) {
 	var str = (data >> 24 &0xFF).toString()+"."+
  (data >> 16 & 0xFF ).toString()+"." + (data >> 8 & 0xFF ).toString()+"." + (data & 0xFF).toString();
  
-//	console.log(str);
+	console.log(str);
 	return str;
-}
-
-	
-	 myForm.addEventListener('reset', function(e){
-	 });
-	 
-	
-	
+	}
 	</script>
+	
+</body>
+
+</html>
