--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="fr">
 <head>
-  <link rel="stylesheet" href="style.css" class="rel">
+  <link rel="stylesheet" href="style3.css" class="rel">
   <meta charset="UTF-8">
   <title>TD1-Addresse IP</title>
   
@@ -16,15 +16,14 @@
 	<form id="myform">
 
 		<p> <label for ="myIP">AdresseIP</label>
-			<input type="text" name="adresseIP" id="myIP">
+			<input type="text" name="adresseIP" id="myIP" required minlength="9" maxlength="18">
 		</p>
-		<p> <label for ="mask">Masque</label>
-			<input type="text" name="mask" id="mask" >
-		</p>
-		<p><label for ="adrN">NouvelleIP</label>
-			<input type="text">
-		</p>
+		
+		
+			
+		
 		<button  type="button" onclick="calcIP()">Confirmer</button>
+		<!-- <button  type="button" onclick="getRandomInt()">Aléatoire</button> -->
 
  
 		<!-- <input type="Submit" value="Aléatoire"> -->
@@ -34,6 +33,8 @@
 	
 	<div id= cont>
 		<div id= demRes>
+			<p>Masque: </p>
+			<br>
 			<p>Adresse réseaux : </p>
 			<br>
 			
@@ -48,10 +49,8 @@
 		</div>
 		
 		
-			<!-- <p>salut1</p><p id="myIP"></p> -->
-		
-			<!-- <p>salut2</p><p id="mask"></p> -->
-		
+			<div id="mask"><p><br></p></div>
+			
 			<div id="adrN"><p><br></p></div>
 			
 			<div id="First"><p><br></p></div>
@@ -68,8 +67,14 @@
 <!-- --- -->
 
 <script>
-	
+	<!-- var nbr1= entieraleatoire(0,255); -->
+	<!-- var nbr2= entieraleatoire(0,255); -->
+	<!-- var nbr3= entieraleatoire(0,255); -->
+	<!-- var nbr4= entieraleatoire(0,255); -->
+	<!-- var CIDRal= entieraleatoire(0,32); -->
 function calcIP() {
+	
+	
 
 	console.log("calcIP");
 
@@ -117,11 +122,7 @@ function calcIP() {
 	document.getElementById("Nb").innerHTML =nb;
 	console.log(nb);
 }
-
-
-
-	
-	  myForm.addEventListener('reset', function(e){ 
+		myForm.addEventListener('reset', function(e){ 
 	  });
 	 
 function toString(data) {
@@ -131,6 +132,27 @@ function toString(data) {
 	console.log(str);
 	return str;
 	}
+	<!-- function random(MIN,MAX) -->
+	<!-- { -->
+	<!-- console.log("aléatoire"); -->
+	<!-- toString(nbr1); -->
+	<!-- toString(nbr2); -->
+	<!-- toString(nbr3); -->
+	<!-- toString(nbr4); -->
+	
+	<!-- var IPal = nbr1+"."+nbr2+"." + nbr3+"."+nbr4; -->
+	<!-- var ipal = elem.split('.'); -->
+	<!-- elem=document.getElementById("IPal").value; -->
+	<!-- var CIDRal = ipal[3].split('/'); -->
+	<!-- console.log(IPal); -->
+	<!-- console.log(CIDRal); -->
+	
+	
+	<!-- return Math.floor(Math.random()*(MAX-MIN+1))+ MIN; -->
+
+
+	
+	
 	</script>
 </body>
 
